amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.report
ModelId: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml
Profile: 
Conforms: false
Number of results: 3

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/aml#dialect-error
  Message: Cannot find property term with alias vocab.text
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml#/declarations/A/property/text
  Property: 
  Range: [(9,22)-(9,32)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml

- Constraint: http://a.ml/vocabularies/amf/aml#dialect-error
  Message: Cannot find property term with alias vocab.text
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml#/declarations/B/property/text
  Property: 
  Range: [(14,22)-(14,32)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml

- Constraint: http://a.ml/vocabularies/amf/aml#missing-node-mapping-range-term
  Message: Cannot find property range term 
  Severity: Violation
  Target: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml#/declarations/RootNode
  Property: http://www.w3.org/ns/shacl#node
  Range: [(22,4)-(23,12)]
  Location: file://amf-aml/shared/src/test/resources/vocabularies2/instances/invalids/empty-discriminator-value/dialect-with-empty-type-discriminator-value.yaml
